@@ -530,7 +530,17 @@ void
 set_peerdstadr(struct peer *peer, struct interface *interface)
 {
 	if (peer->dstadr != interface) {
-		struct interface *prev_dstadr = peer->dstadr;
+		if (interface != NULL &&
+		    (peer->cast_flags & MDF_BCLNT) &&
+		    (interface->flags & INT_MCASTIF) &&
+		    peer->burst) {
+			/*
+			 * don't accept updates to a true multicast reception
+			 * interface while a BCLNT peer is running it's
+			 * unicast protocol
+			 */
+			return;
+		}
 
 		if (peer->dstadr != NULL)
 		{
@@ -544,16 +554,6 @@ set_peerdstadr(struct peer *peer, struct interface *interface)
 			    (interface != NULL) ? stoa(&interface->sin) : "<null>"));
 
 		peer->dstadr = interface;
-
-		if (prev_dstadr != NULL) {
-			/*
-			 * reset crypto information if we change from an
-			 * active interface
-			 * all other crypto updates are handled by the crypto
-			 * machinery
-			 */
-			peer_crypto_clear(peer);
-		}
 
 		if (peer->dstadr != NULL)
 		{
@@ -569,7 +569,7 @@ set_peerdstadr(struct peer *peer, struct interface *interface)
 static void
 peer_refresh_interface(struct peer *peer)
 {
-	struct interface *niface;
+	struct interface *niface, *piface;
 
 	niface = select_peerinterface(peer, &peer->srcadr, NULL, peer->cast_flags);
 
@@ -607,9 +607,18 @@ peer_refresh_interface(struct peer *peer)
 	}
 #endif
 
+	piface = peer->dstadr;
+
 	set_peerdstadr(peer, niface);
 
 	if (peer->dstadr) {
+                /*
+                 * clear crypto if we change the local address
+                 */
+                if (peer->dstadr != piface && !(peer->cast_flags & MDF_BCLNT)) {
+			peer_crypto_clear(peer);
+		}
+
 		/*
 	 	 * Broadcast needs the socket enabled for broadcast
 	 	 */
